# web-trbd

./: .gitignore
WEB_oleg/: manage.py  pyproject.toml  requirements.txt  todo.md
WEB_oleg/WEB_oleg/: asgi.py  databases.py  settings.py  urls.py  wsgi.py
WEB_oleg/rental/: forms.py  models.py  urls.py  utils.py  views.py
WEB_oleg/rental/migrations/: 0001_initial.py  0002_alter_car_number_alter_car_year_alter_client_license_and_more.py  0003_alter_car_color_alter_car_model_alter_car_number_and_more.py
WEB_oleg/templates/: all_data_list.html  base.html  index.html
WEB_oleg/templates/rental/: car_confirm_delete.html  car_form.html  car_list.html  car_report.html  client_confirm_delete.html  client_form.html  client_list.html  maintenance_confirm_delete.html  maintenance_form.html  maintenance_list.html  maintenance_report.html  oleg.html  rent_confirm_delete.html  rent_form.html  rent_list.html  rent_report.html  service_confirm_delete.html  service_form.html  service_list.html
