[tool.poetry]
name = "web-oleg"
version = "0.1.0"
description = ""
authors = ["Oleg <bababyby@kek.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-pg8000 = "^0.0.5"
django-tables2 = "^2.7.0"
django-filter = "^24.3"
django-bootstrap3 = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
